Fix overflow in mobile nav

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -2075,6 +2075,7 @@ body.embed .detailed-status__meta .detailed-status__link .icon-retweet,
 
 /* Hide scrollbars for .navigation-panel for Chrome and Safari */
 .dropdown-menu__container__list--scrollable::-webkit-scrollbar,
+.layout-multiple-columns .navigation-panel__menu::-webkit-scrollbar,
 .layout-multiple-columns .navigation-panel::-webkit-scrollbar {
   display: none;
   width: 4px;
@@ -3698,11 +3699,22 @@ body.embed .button.logo-button:hover,
     width: 100vw;
   }
 
-  .layout-multiple-columns .columns-area__panels__pane--navigational .navigation-panel {
+  .layout-single-column .columns-area__panels__pane--navigational .navigation-panel {
+    display: block;
+    padding: 0;
+  }
+
+  .layout-single-column .columns-area__panels__pane--navigational .navigation-panel .flex-spacer {
+    display: none;
+  }
+
+  .layout-single-column .columns-area__panels__pane--navigational .navigation-panel__menu {
     flex-direction: row;
+    flex-wrap: nowrap;
     gap: 0;
     height: 100%;
     overflow-x: auto;
+    overflow-y: hidden;
     padding: 0;
   }
 
