--- a/layout-single-column.css
+++ b/layout-single-column.css
@@ -2196,6 +2196,7 @@ body.embed .detailed-status__meta .detailed-status__link .fa-retweet,
 
 /* Hide scrollbars for .navigation-panel for Chrome and Safari */
 .dropdown-menu__container__list--scrollable::-webkit-scrollbar,
+.layout-single-column .navigation-panel__menu::-webkit-scrollbar,
 .layout-single-column .navigation-panel::-webkit-scrollbar {
   display: none;
   width: 4px;
@@ -4016,6 +4017,7 @@ body.embed .button.logo-button:hover,
     gap: 0;
     height: 100%;
     overflow-x: auto;
+    overflow-y: hidden;
     padding: 0;
   }
 
